[DiSLInstrumentor] Pass parts of TestGenerationContext and RunConfiguration to Collector through the template handler, fix paths